Fixed Some Bugs

--- a/index.html
+++ b/index.html
@@ -82,13 +82,9 @@
 				<div class="container">
 					<div class="wrap-1285">
 						<div class="banner-detail">
-							<h1>Welcome To<br><span>Optispots</span></h1>
+							<h1>Welcome To <span>Optispots</span></h1>
 							<p>We are a talented online digital marketing agency that specialises in getting the best possible results.</p>
-							<div class="banner-button">
-								<a href="javascript:void(0)" title="Let’s Chat" class="orange-button">
-									Let’s Chat <i class="fa fa-angle-double-right"></i>
-								</a>
-							</div>
+							<a href="javascript:void(0)" title="Let’s Chat" class="orange-button">Let’s Chat <i class="fa fa-angle-double-right"></i></a>
 						</div>
 					</div>
 				</div>
@@ -137,9 +133,7 @@
 							</div>
 						</div>
 					</div>
-					<div>
-						<a href="javascript:void(0)" title="View Our Servies" class="orange-button">View Our Servies <i class="fa fa-angle-double-right"></i></a>
-					</div>
+					<a href="javascript:void(0)" title="View Our Servies" class="orange-button">View Our Servies <i class="fa fa-angle-double-right"></i></a>
 				</div>
 			</section>
 
@@ -160,9 +154,7 @@
 							<p>
 								<span>You have a vision. We have the skills.</span><br>The team at Optispots are highly committed to achieving long-term results for customers. We value long-term relationships with our customers and we love helping all businesses grow. We are an extremely creative and dedicated team of professionals that loves exploring all different ways to achieve the best possible results for our clients.
 							</p>
-							<div>
-								<a href="javascript:void(0)" title="More About Us" class="orange-button">More About Us <i class="fa fa-angle-double-right"></i></a>
-							</div>
+							<a href="javascript:void(0)" title="More About Us" class="orange-button">More About Us <i class="fa fa-angle-double-right"></i></a>
 						</div>
 					</div>
 				</div>
@@ -175,9 +167,7 @@
 						<div class="section-detail">
 							<h3>You Bring The Leads We Do The Work</h3>
 							<p>Need help in handling a torrential downpour of clients? Or simply want to cover a service that you don’t normally offer? With our white label services, you can handle all the work you want to take on. You land the clients; we deliver the service. Its as simple as that.</p>
-							<div>
-								<a href="javascript:void(0)" title="Join With Us" class="orange-button">Join With Us <i class="fa fa-angle-double-right"></i></a>
-							</div>
+							<a href="javascript:void(0)" title="Join With Us" class="orange-button">Join With Us <i class="fa fa-angle-double-right"></i></a>
 						</div>
 					</div>
 				</div>
@@ -315,9 +305,7 @@
 								<img src="assets/images/recaptcha.png" alt="Captcha">
 							</figure>
 						</div>
-						<div>
-							<a href="javascript:void(0)" title="Submit" class="orange-button">Submit <i class="fa fa-angle-double-right"></i></a>
-						</div>
+						<a href="javascript:void(0)" title="Submit" class="orange-button">Submit <i class="fa fa-angle-double-right"></i></a>
 					</div>
 				</div>
 			</section>
@@ -342,9 +330,7 @@
 									<p class="card-detail">
 										Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquat enim ad minim 
 									</p>
-									<div>
-										<a href="javascript:void(0)" class="orange-button" title="Read More">Read More <i class="fa fa-angle-double-right"></i></a>
-									</div>
+									<a href="javascript:void(0)" class="orange-button" title="Read More">Read More <i class="fa fa-angle-double-right"></i></a>
 								</div>
 							</div>
 							<div class="display-33">
@@ -359,9 +345,7 @@
 									<p class="card-detail">
 										Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquat enim ad minim 
 									</p>
-									<div>
-										<a href="javascript:void(0)" class="orange-button" title="Read More">Read More <i class="fa fa-angle-double-right"></i></a>
-									</div>
+									<a href="javascript:void(0)" class="orange-button" title="Read More">Read More <i class="fa fa-angle-double-right"></i></a>
 								</div>
 							</div>
 							<div class="display-33">
@@ -376,9 +360,7 @@
 									<p class="card-detail">
 										Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliquat enim ad minim 
 									</p>
-									<div>
-										<a href="javascript:void(0)" class="orange-button" title="Read More">Read More <i class="fa fa-angle-double-right"></i></a>
-									</div>
+									<a href="javascript:void(0)" class="orange-button" title="Read More">Read More <i class="fa fa-angle-double-right"></i></a>
 								</div>
 							</div>
 						</div>
@@ -394,9 +376,7 @@
 			<div class="container display-flex">
 				<div class="footer-title">
 					<h3>Let's Get You On Your Way To Success</h3>
-					<div>
-						<a href="javascript:void(0)" class="orange-button" title="Get In Touch">Get In Touch <i class="fa fa-angle-double-right"></i></a>
-					</div>
+					<a href="javascript:void(0)" class="orange-button" title="Get In Touch">Get In Touch <i class="fa fa-angle-double-right"></i></a>
 				</div>
 
 				<div class="wrap-1170">
